--- a/PhD_Admission/templates/homecard.html
+++ b/PhD_Admission/templates/homecard.html
@@ -31,7 +31,7 @@
           <label for="inputState" class="col-sm-3 col-form-label">Nationality</label>
           <select id="inputState" class="form-control">
             <option selected>Filter by nationality</option>
-            <option>US</option>
+            <option>Domestic</option>
             <option>China</option>
             <option>India</option>
           </select>
@@ -49,6 +49,7 @@
           <select id="inputState" class="form-control">
             <option selected>Filter by reviewing status</option>
             <option>All candidates</option>
+            <option>not reviewed</option>
             <option>reviewed</option>
           </select>
         </div>
