--- a/PhD_Admission/templates/review.html
+++ b/PhD_Admission/templates/review.html
@@ -8,9 +8,7 @@
     <br>
     <br>
 <div>
-    <a class="btn btn-secondary" href="../" role="button">Home</a>
-    <a class="btn btn-secondary" href="/review" role="button">Previous candidate</a>
-    <a class="btn btn-secondary" href="/review" role="button">Next candidate</a>
+    
     <a href="#" class="badge badge-primary">Reviewing by Tanzir</a>
     <a href="#" class="badge badge-success">nationality: All</a>
     <a href="#" class="badge badge-success">research interest: AI</a>
@@ -83,7 +81,62 @@
 </table>
 
 
+<form>
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Input Score</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>5</option>
+      <option>4</option>
+      <option>3</option>
+      <option>2</option>
+      <option>1</option>
+      <option>0</option>
+    </select>
+  </div>
+  
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Do you want be this candidate's faculty</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>No</option>
+      <option>Yes</option>
+    </select>
+  </div>
+  
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Do you want provide assistantship to this candidate</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>No</option>
+      <option>Yes</option>
+    </select>
+  </div>
+  
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Do you want nominate another faculty as contact? (we will send an email to this faculty)</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>No</option>
+      <option>Tom</option>
+      <option>Jim</option>
+      <option>Jerry</option>
+      <option>Donald</option>
+      <option>Tim</option>
+    </select>
+  </div>
 
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Input Comments</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+  
+  
+  
+  
+  <div>
+    <button type="button" class="btn btn-success">Confirm</button>
+    <a class="btn btn-secondary" href="/review" role="button">Previous candidate</a>
+    <a class="btn btn-secondary" href="/review" role="button">Next candidate</a>
+    <a class="btn btn-secondary" href="../" role="button">Home</a>
+  </div>
+</form>
 
 
 
