--- a/PhD_Admission/templates/review.html
+++ b/PhD_Admission/templates/review.html
@@ -41,13 +41,13 @@
   <tbody>
     <tr>
       <td>Not reviewed by Tanzir</td>
-      <td>12</td>
-      <td>Otto</td>
+      <td>{{applicant.Application_ID}}</td>
+      <td>{{applicant.Name}}</td>
       <td>Male</td>
-      <td>4.5</td>
-      <td>CS PhD</td>
+      <td>{{applicant.Average_Review_Score}}</td>
+      <td>{{applicant.Applied_Degree}}</td>
       <td>US</td>
-      <td>Otto@gmail.com</td>
+      <td>{{applicant.Email}}</td>
       <td>Tanzir</td>
     </tr>
 
