--- a/PhD_Admission/templates/hometable.html
+++ b/PhD_Admission/templates/hometable.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% block content %}
     <!--<h1>This page is table</h1>-->
     <div class = "container">
@@ -84,4 +84,4 @@
 
 
     <!-- <p>{{api}}</p> -->
-{%endblock%}
+{%endblock%} {% endcomment %}
